Issue #3191727 by Santosh_Verma, Gauravvvv, imalabya, chetanbharambe, Harish1688, chetansonawane, lauriii, smustgrave, mherchel: Focus states on mobile second level navigation items can get cut off in Olivero
(cherry picked from commit 924d567aacc9277ae98884e0af5a88007f1c8fa7)

--- a/core/themes/olivero/css/components/navigation/nav-primary.pcss.css
+++ b/core/themes/olivero/css/components/navigation/nav-primary.pcss.css
@@ -165,6 +165,16 @@
     opacity: 1;
   }
 
+  & .primary-nav__menu-item--level-2 {
+    &:first-child {
+      padding-block-start: var(--sp0-25);
+    }
+
+    &:last-child {
+      padding-block-end: var(--sp0-25);
+    }
+  }
+
   @media (--md) {
     margin-inline-start: calc(-1 * var(--sp3));
     padding-inline-start: var(--sp3);
